# 1337-Noms-The-Hacker-Cookbook

./: .gitattributes  .gitignore  .markdown-lint.json  .markdownlint.json  .stickler.yml  .travis.yml  1337-noms-the-hacker-cookbook.nja  Add to Desserts  Best Ever Marinated Salmon.md  BrusselSproutSalad.md  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS.md  MANIFEST  Makefile  Procfile  README.md  SECURITY.md  _section.md  credits.md  docker-compose.yml  ifmtarg.tex  index.php  license.md  make_book.py  pyproject.toml  requirements.txt  setup.py  template.md  tox.ini
.admin/: CONTRIBUTING.md  Dockerfile  Makefile.am  README.md  SECURITY.md  bootstrap.sh  configure.ac  docker-compose.yml
.admin/aclocal/: latex.m4
.admin/aclocal/latex-m4/: ac_latex_dvips_t_a4.m4  ac_latex_dvips_t_a4_landscape.m4  ac_latex_dvips_t_letter.m4  ac_latex_package_fontenc.m4  ac_latex_package_input.m4  ac_latex_packages.m4  ac_prog_bibtex.m4  ac_prog_fig2dev.m4  ac_prog_gunzip.m4  ac_prog_gzip.m4  ac_prog_jpeg2ps.m4  ac_prog_latex2man.m4  ac_prog_latex2rtf.m4  ac_prog_pngtopnm.m4  ac_prog_ps2pdf.m4  ac_prog_psbook.m4  ac_prog_psresize.m4  ac_texmf_path.m4
.admin/cookbook/: Makefile.am  preamble.tex
.admin/cookbook/frontmatter/: header.tex
.admin/cookbook/mainmatter/: mainmatter.tex
.admin/docker/: Dockerfile  docker-compose.yml
.admin/src/: requirements.txt
.admin/tex/: Makefile.am  preamble.tex
.admin/tex/backmatter/: backmatter.tex  end.tex
.admin/tex/frontmatter/: colophon.tex  epigraph.tex  frontmatter.tex  header.tex  maketitle.tex  preface.tex
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  config.yml  stale.yml
APPETIZERS/: Ajn_point_reyes_brussels_sprout_salad.md  boredsillys_angry_guacamole.md  diff_asian_chicken_wings.md  section.tex  sl3dge_bone_marrow_mushrooms_and_broccolini.md  theDevilsVoice_street_corn.md  v3rtig0_Mashed_Potato_Croquettes.md
BREAKFAST/: Marler_quick_migas.md  _section.md  _section.rst  aaron_the_king_hashbrownpatty_bacon_sandwich.md  n1cfury_AES.md  section.tex
COOKWARE/: _section.md  _section.rst  aaron_the_king_tea_tasting_can.md  section.tex
DESSERTS/: Breaking_Bad_Blackhat_Brownies.md  TailPufft_Cream_Cheese_Roll_Out_Cookies_With_Orange.md  TailPufft_Vegan_Carrot_Cake.md  TailPufft_Whiskey_caramel_Apple_Hand_Pies.md  TailPufft_Whiskey_caramel_Apple_Hand_Pies.rst  TunnyTraffic_Foolproof_Victoria_Sponge.md  WireGhost_Key_Lime_Pyrewall.md  keto_marbled_turtle_cheesecake.md  section.tex  wishperactual_peppernuts.md
DRINKS/: Dual_Core-Faderade.md  Dual_Core-Macaulay.md  Dual_Core-Plausible_Deniability.md  Dual_Core-Vodka_Redbull.md  _section.md  ashmastaflash-grandpappys_turnt_juice.md  ashmastaflash-grandpappys_turnt_juice.rst  b1ack0wl-holiday-drink.md  iHeartMalwares_THE_Purple_Drink.md  iHeartMalwares_rocket_league.md  iHeartMalwares_rocket_league.rst  iHeartMalwares_sweet_tart.md  moonbas3_new_fashioned.md  section.tex  tiptone-mexican-martini.md  tiptone-mexican-martini.rst
Desserts/: Key Lime Pyrewall
ENTREES/: 0xrnair_monster_chicken_burrito.md  BenHeise_Bangers_and_Mash.md  Dual_Core-Mom-s_Spaghetti.md  _section.md  _section.rst  aaron_the_king_dishwasher_salmon.md  aaron_the_king_dishwasher_salmon.rst  boredsillys_baked_gringo.md  boredsillys_excuse_to_eat_bacon_avocado_sandwich.md  da_667s_cheesy_chicken_chili.md  deviant_ollam_sous_vide_steak.md  dis0wn-TwoCheese_Bacon_Potato_and_Cauliflower_Soup.md  dis0wn-TwoCheese_Bacon_Potato_and_Cauliflower_Soup.rst  elegin_balsamic_tempeh.md  elegin_cauliflower_steaks.md  elegin_cauliflower_steaks.rst  elegin_chickpea_tacos.md  elegin_one_pot_thai_peanut.md  hardwaterhacker_crispy_parmesan_baked_walleye.md  hardwaterhacker_grilled_cedar_plank_salmon.md  hardwaterhacker_grilled_cedar_plank_salmon.rst  iHeartMalware_NC_Pulled_Pork.md  iHeartMalware_NC_Pulled_Pork.rst  miss_gif_crock-pot-meatshield.md  moonbas3_bbq_ribs.md  moonbas3_mississippi_pot_roast.md  panaderos_sausage_balls.md  rahlquist_slow_cooker_chorizo_black_bean_stew.md  section.tex  sl3dges_low-carb_sticky_pork_belly.md  slufs_seared_tuna_pasta.md  slufs_seared_tuna_pasta.rst  travelars_southwest_porkchops.md  wimzkl_caramelized-onion-mushroom-stuffin.md  wireheadlance_grandmothers_chicken_and_gravy.md  wireheadlance_grandmothers_chicken_and_gravy.rst
SAUCES/: _section.md  _section.rst  elegin_vegan_tarter_sauce.md  iHeartMalware_buffalo_sauce.md  jcase_LowCarb_Alabama_white_BBQ_sauce.md  jcase_LowCarb_NorthCarolina_BBQ_sauce.md  section.tex
SIDES/: _section.md  dis0wn-Whiskey_Cranberry_Brussel_Sprouts.md  iHeartMalware_fermented_cranberry_relish.md  iHeartMalware_fermented_sauerkraut.md  section.tex  thedevilsvoice_jangajji.md
SNACKS/: WireGhost_Eclectic_Freedom_Fries.md  _section.md  aaron_the_king-chicken_parm_nachos.md  hardwaterhacker_smoked_whitefish.md  (+3 more)
admin/: CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac  convert_rst_md.sh
admin/aclocal/latex-m4/: _ac_latex_test.m4  ac_latex_class.m4  ac_latex_class_article.m4  ac_latex_class_book.m4  ac_latex_class_report.m4  ac_latex_classes.m4  ac_latex_dvips_o_stdout.m4  ac_latex_dvips_t.m4  ac_latex_dvips_t_letter_landscape.m4  ac_latex_package.m4  ac_latex_package_amsmath.m4  ac_latex_package_opt.m4  ac_prog_dvibook.m4  ac_prog_dvipdf.m4  ac_prog_gnuplot.m4  ac_prog_jpegtopnm.m4  ac_prog_latex2html.m4  ac_prog_latex2png.m4  ac_prog_mf.m4  ac_prog_mktexpk.m4  ac_prog_pnmtops.m4  ac_prog_psnup.m4  ac_prog_psselect.m4
admin/cookbook/: Makefile.am  hacker_cookbook.tex
admin/cookbook/backmatter/: backmatter.tex
admin/cookbook/frontmatter/: frontmatter.tex
admin/docker/: Dockerfile  README.md
(+435 files in other folders)
